# homework30_1

./: .env  .env.sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options.py  0003_alter_lesson_video_link.py  0004_course_owner_lesson_owner.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json  payments.json
users/management/commands/: add_payments.py  createadminuser.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_remove_payment_course_remove_payment_lesson_and_more.py  0004_alter_payment_options.py  0005_remove_payment_content_type_remove_payment_object_id_and_more.py  0006_alter_payment_payment_method.py  0007_subscription.py
